# pcopy

./: LICENSE  README.md  pyproject.toml
src/pcopy/: __init__.py
